--- a/E-commerceMVCProject/Views/_ViewImports.cshtml
+++ b/E-commerceMVCProject/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using E_commerceMVCProject
 @using E_commerceMVCProject.Models
 @using E_commerceMVCProject.viewmodels
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
