--- a/E-commerceMVCProject/Views/Home/Shop.cshtml
+++ b/E-commerceMVCProject/Views/Home/Shop.cshtml
@@ -1,7 +1,212 @@
-﻿
+﻿@model List<ProductVM>
 @{
     ViewData["Title"] = "Shop";
 }
-
 <h1>Shop</h1>
+<!-- breadcrums -->
+<div class="container py-4 flex items-center gap-3">
+    <a href="/Home/Index" class="text-primary text-base">
+        <i class="fas fa-home"></i>
+    </a>
+    <span class="text-sm text-gray-400">
+        <i class="fas fa-chevron-right"></i>
+    </span>
+    <p class="text-gray-600 font-medium">Shop</p>
+</div>
+<!-- breadcrums-end -->
 
+<div class="container grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 md:gap-6 lg:gap-6 pt-4 pb-16 items-start">
+    <!-- sidebar -->
+    <div class="col-span-1 cg-white px-4 lg:px-4 lg:px-4 pb-6 w-36 md:w-52 lg:w-56 shadow rounded overflow-hidden">
+        <div class="divide-y divide-gray-200 space-y-5">
+            <!-- category filter -->
+            <div>
+                <h3 class="text-md lg:text-xl text-gray-800 uppercase py-2 font-medium">
+                    categories
+                </h3>
+                <div class="space-y-4 divide divide-y">
+                    @foreach (var category in ViewBag.categoryList)
+                    {
+                        <!-- single category -->
+                        <div class="flex items-center pt-4">
+                            <a href="/Home/FilterByCategory/@category.Id"
+                           class="btn text-gray-600 ml-1 md:ml-3 lg:ml-3 cursor-pointer hover:text-primary">
+                                @category.Name
+                            </a>
+                        </div>
+                        <!-- single category-end -->
+                    }
+                </div>
+                <!-- category filter-end -->
+                <!-- brand filter -->
+                <div class="pt-2">
+                    <div>
+                        <h3 class="text-md lg:text-xl text-gray-800 uppercase py-2 font-medium">
+                            brands
+                        </h3>
+                        <div class="space-y-2">
+                            @foreach (var brand in ViewBag.brandList)
+                            {
+                                <!-- single category -->
+
+                                <div class="flex items-center">
+                                    <input type="checkbox"
+                                       id="brand-1"
+                                       class="focus:ring-0 rounded-sm cursor-pointer"
+                                       style="accent-color: #fd3d57" />
+                                    <label for="brand-1"
+                                        class="text-gray-600 ml-1 md:ml-3 lg:ml-3 cursor-pointer">@brand.Name
+                                    </label>
+                                    <div class="ml-1 md:ml-auto lg:ml-auto text-gray-600 text-sm">
+                                        (15)
+                                    </div>
+                                </div>
+                                <!-- single category-end -->
+                            }
+                        </div>
+                    </div>
+                </div>
+                <!-- brand filter-end -->
+                <!-- price filter -->
+                <div class="pt-2">
+                    <h3 class="text-md lg:text-xl text-gray-800 mb-3 uppercase font-medium">
+                        price
+                    </h3>
+                    <div class="mt-4 flex items-center">
+                        <input id="priceFilter"
+                               type="text"
+                               placeholder="min"
+                               class="w-full border rounded border-gray-300 focus:ring-0 focus:outline-none px-3 py-1 text-gray-600 text-sm shadow-sm" />
+                        <span class="mx-3 text-gray-500">-</span>
+                        <input id="priceFilter"
+                               type="text"
+                               placeholder="max"
+                               class="w-full border rounded border-gray-300 focus:ring-0 focus:outline-none px-3 py-1 text-gray-600 text-sm shadow-sm" />
+                    </div>
+                </div>
+                <!-- price filter-end -->
+            </div>
+        </div>
+        <!-- sidebar-end -->
+
+
+
+
+
+
+
+
+
+
+</div>
+
+    <!-- product -->
+    <div class="col-span-1 md:col-span-2 lg:col-span-3">
+        <!-- sorting -->
+        <div class="flex items-center mb-4">
+            <select class="w-44 text-gray-600 px-4 py-3 border-gray-300 shadow-sm rounded focus:ring-primary focus:outline-none">
+                <option value="">Default sorting</option>
+                <option value="">price low-high</option>
+                <option value="">price high-low</option>
+                <option value="">Latest products</option>
+            </select>
+            <div class="flex gap-2 ml-auto"></div>
+        </div>
+        <!-- sorting-end -->
+        <!-- product grid -->
+        <div class="flex justify-center">
+            <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 lg:gap-28">
+                @foreach (var product in Model)
+                {
+                    <!-- single product -->
+                    <div class="w-48 lg:w-56 bg-white rounded overflow-hidden drop-shadow-md group">
+                        <!-- product image -->
+                        <div class="relative">
+                            <img src="/images/@product.Name/@product.Images.ElementAt(0).ImageName"
+                             alt="product_img"
+                             class="w-full h-56" />
+                            <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center gap-2 opacity-0 group-hover:opacity-100 transition">
+                                <a href="/Product/Details/@product.Id"
+                               class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition">
+                                    <i class="fas fa-search"></i>
+                                </a>
+                                <a href=""
+                               class="text-white text-lg w-9 h-8 rounded-full bg-primary flex items-center justify-center hover:bg-gray-800 transition">
+                                    <i class="far fa-heart"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <!-- product image-end -->
+                        <!-- product content -->
+                        <div class="pt-4 pb-3 px-4">
+                            <!-- name -->
+                            <a href=""
+                           class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary transition">@product.Name</a>
+                            <!-- price -->
+                            <div class="flex items-baseline mb-1 space-x-2 font-roboto">
+                                <p class="text-xl text-primary font-semibold">
+                                    $@product.BuyingPrice
+                                </p>
+                                <p class="text-sm text-gray-400 line-through">
+                                    $@product.SellingPrice
+                                </p>
+                            </div>
+                            <!-- price-end -->
+                            <!-- stars -->
+                            <div class="flex items-center">
+                                <div class="flex gap-1 text-sm text-yellow-400">
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                    <span><i class="fas fa-star"></i></span>
+                                </div>
+                                <div class="text-xs text-gary-500 ml-3">
+                                    @product.StockCount
+                                </div>
+                            </div>
+                        </div>
+                        <!-- add to cart btn -->
+                        <a href="/ShoppingCart/AddtoCart/@product.Id"
+                       class="block w-full mt-1 py-2 text-center text-white bg-primary border border-primary rounded-b hover:bg-transparent hover:text-primary transition">Add to cart</a>
+                        <!-- product content-end -->
+                    </div>
+                    <!-- single product-end -->
+                }
+            </div>
+        </div>
+        <!-- product grid-end -->
+    </div>
+    <!-- product-end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@section Scripts{
+    <script>
+          function Filter(id){
+               var categoryId = id;
+        $.ajax({
+          url: "/Home/FilterByCategory/"+id,
+          type: "GET",
+          success: function() {
+            var currentCount = parseInt($(".cart-count").text());
+            var newCount = currentCount + 1;
+            $(".cart-count").text(newCount);
+          }
+        })
+          }
+    </script>
+}
