--- a/E-commerceMVCProject/Views/Profile/Profile.cshtml
+++ b/E-commerceMVCProject/Views/Profile/Profile.cshtml
@@ -2,20 +2,20 @@
     ViewData["Title"] = "Profile";
 }
 
-<h1 class="text-center">Profile</h1>
 
-<div class="container mt-5 pt-5">
-    <div class="row">
-        <div class="col-md-4  mr-5 text-end">
-            <img src="https://fakeimg.pl/100x100/">
-            <ul class="list-unstyled">
-                <li><a onclick="GetData()">Personal Data</a></li>
-                <li><a onclick="GetUpdate()"> Update Profile</a></li>
-                <li><a asp-controller="Account" asp-action="Logout">Logout</a></li>
-            </ul>
-        </div>
-        <div id="personalData" class="col-md-6"></div>
+<div class="container-fluid mt-5 pt-5">
+    <div class=" grid grid-cols-2 lg:grid-cols-2 ">
+        <ul class="list-unstyled text-center">
+            <li> <img class="img-user" src="~/img/user.jpeg" />    </li>
+            <li class="ps-4"><a onclick="GetData()">Personal Data</a></li>
+            <li class="ps-4"><a onclick="GetUpdate()"> Update Profile</a></li>
+            <li class="ps-4"><a asp-controller="Account" asp-action="Logout">Logout</a></li>
+        </ul>
+
+        <div id="personalData"></div>
+
     </div>
+
 </div>
 
 @section Scripts
