--- a/E-commerceMVCProject/Views/Shared/_Layout.cshtml
+++ b/E-commerceMVCProject/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
         <div class="container flex items-center justify-between">
             <!-- 1-logo -->
             <a href="#">
-                <img src="/img/iti-logo.png" alt="LOGO-IMG" class="h-20" />
+                <img src="/img/logo.jpeg" alt="LOGO-IMG" class="h-20" />
             </a>
 
             <!-- 2-searchBar-Desktop -->
@@ -59,10 +59,12 @@
                             <i class="fas fa-shopping-bag"></i>
                         </div>
                         <div class="text-xs leading-3">Cart</div>
-                        <span class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs cart-count">@((Request.Cookies["CartCount"]?.Value ?? "0"))</span>
+                        <span id="cart-icon" class="absolute -right-3 -top-1 w-5 h-5 rounded-full flex items-center justify-center bg-primary text-white text-xs cart-count">
+                            @Counter.count
+                        </span>
                     </a>
 
-                    <a asp-controller="Account" asp-action="Profile"
+                    <a asp-controller="Profile" asp-action="Profile"
                    class="text-gray-700 hover:text-primary transition relative flex flex-col items-center">
                         <div class="text-2xl">
                             <i class="far fa-user"></i>
@@ -174,7 +176,7 @@
         <div class="container grid grid-cols-3">
             <!-- footer text -->
             <div class="col-span-1 space-y-8">
-                <img src="/img/iti-logo.png" alt="LOGO-IMG" class="h-20" />
+                <img src="/img/logo.jpeg" alt="LOGO-IMG" class="h-20" />
                 <p class="text-gray-500">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </p>
