--- a/E-commerceMVCProject/Views/Home/Shop.cshtml
+++ b/E-commerceMVCProject/Views/Home/Shop.cshtml
@@ -25,7 +25,7 @@
                     categories
                 </h3>
                 <div class="space-y-4 divide divide-y">
-                    @foreach (var category in ViewBag.categoryList)
+                    @foreach (var category in (List<CategoryVM>)ViewData["categoryList"])
                     {
                         <!-- single category -->
                         <div class="flex items-center pt-4">
@@ -45,7 +45,7 @@
                             brands
                         </h3>
                         <div class="space-y-2">
-                            @foreach (var brand in ViewBag.brandList)
+                            @foreach (var brand in (List<BrandVM>)ViewData["brandList"])
                             {
                                 <!-- single category -->
 
